--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "barryvdh/laravel-cors": "^0.11.3",
         "laravel/lumen-framework": "5.8.*",
+        "nuwave/lighthouse": "^3.2",
         "vlucas/phpdotenv": "^3.3"
     },
     "require-dev": {
